[package]
name = "snowstorm"
version = "0.1.0"
edition = "2021"
authors = ["Kittech <kittech@skiff.com"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.12.0"
rand = "0.8.5"
